--- a/C968_Inventory_App/C968_Inventory_App.csproj
+++ b/C968_Inventory_App/C968_Inventory_App.csproj
@@ -48,6 +48,12 @@
   <ItemGroup>
     <Compile Include="Classes\Inhouse.cs" />
     <Compile Include="Classes\Inventory.cs" />
+    <Compile Include="Forms\EditPart.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\EditPart.Designer.cs">
+      <DependentUpon>EditPart.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\ItemDetailForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -86,6 +92,9 @@
     <EmbeddedResource Include="CustomControls\PageLabel.resx">
       <DependentUpon>PageLabel.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\EditPart.resx">
+      <DependentUpon>EditPart.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\ItemDetailForm.resx">
       <DependentUpon>ItemDetailForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -107,6 +116,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Properties\DataSources\EditProduct.datasource" />
     <None Include="Properties\DataSources\Inhouse.datasource" />
     <None Include="Properties\DataSources\Inventory.datasource" />
     <None Include="Properties\DataSources\ItemDetailForm.datasource" />
